--- a/app/views/profiles/_artist-banner.html.erb
+++ b/app/views/profiles/_artist-banner.html.erb
@@ -9,8 +9,13 @@
           <br><br><p><%= link_to 'Add pictures', new_profile_artist_picture_path(@profile), class:"bw-border-tbg" if current_user == @profile.user %></p>
         <%end%>
 
-        <h3><% if !current_user.bars.empty? && current_user.profile.is_artist %>
-          <%= link_to "Contact this artist !", new_profile_chatbox_path(@profile), class:"b-border-tbg" %>
+        <h3><% if !current_user.bars.empty? %>
+
+          <button type="button" class="bw-border-tbg fullspace" data-toggle="modal" data-target="#addProfile<%= @profile.id %>ChatboxModal">
+                    Contact this artist !
+                  </button>
+          <%= render 'chatboxes/new_modal', profile: @profile, chatbox: Chatbox.new  %>
+
           <% end %></h3>
         </div>
     </div>
