--- a/app/views/chatboxes/index.html.erb
+++ b/app/views/chatboxes/index.html.erb
@@ -1,23 +1,22 @@
 <div class="container"><br><br><br><br>
   <% if !@chatboxes.empty? %>
-    <h1>YOUR MESSAGES</h1>
-    <% @chatboxes.each do |hash| %>
-    <% if hash[:last_msgs_username] == current_user.profile.username %>
-        <div class="message-sent">
-    <% else %>
-        <div class="message-received">
-    <% end %>
-        <div class="prevchat">
-        <%# if !@last_msgs_content[i].nil? %>
-            <h3><%= link_to "CHAT WITH #{hash[:partners_name ]}", chatbox_path(hash[:id]),class: "blue-link" %></h3>
-            <p><%= hash[:last_msgs_username] %> sent:</p>
-            <h4><%= hash[:last_msgs_content] %></h4><br>
-            <%= link_to "Read previous", chatbox_path(hash[:id]),class: "b-border-tbg" %>
-        <%# end %>
-          </div>
+    <div class="sidenav">
+      <% @chatboxes.each do |hash| %>
+        <div>
+          <h3><%= hash[:partners_name] %></h3>
+        </div>
+        <div>
+          <p><%= hash[:last_msgs_username] %> sent:</p>
+        </div>
+        <div>
+          <h4><%= hash[:last_msgs_content] %></h4><br>
+        </div>
+        <%= link_to "Read previous", chatbox_path(hash[:id]),class: "b-border-tbg" %>
+      <% end %>
     </div>
-    <% end %>
+
   <% else %>
+
     <h1>No messages... yet ! </h1>
     <%if current_user.profile.is_bar_manager %>
       <h3><%= link_to "Discover our Artists ✨", profiles_path, class: "b-border-tbg fullspace" %></h3>
@@ -26,3 +25,48 @@
     <% end %>
   <% end %>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <div class="container"><br><br><br><br> -->
+  <%# if !@chatboxes.empty? %>
+    <!-- <h1>YOUR MESSAGES</h1> -->
+    <%# @chatboxes.each do |hash| %>
+    <%# if hash[:last_msgs_username] == current_user.profile.username %>
+        <!-- <div class="message-sent"> -->
+    <%# else %>
+        <!-- <div class="message-received"> -->
+    <%# end %>
+        <!-- <div class="prevchat"> -->
+            <!-- <h3><%#= link_to "CHAT WITH #{hash[:partners_name ]}", chatbox_path(hash[:id]),class: "blue-link" %></h3> -->
+            <!-- <p><%#= hash[:last_msgs_username] %> sent:</p> -->
+            <!-- <h4><%#= hash[:last_msgs_content] %></h4><br> -->
+            <%#= link_to "Read previous", chatbox_path(hash[:id]),class: "b-border-tbg" %>
+          <!-- </div> -->
+    <!-- </div> -->
+    <%# end %>
+  <%# else %>
+    <!-- <h1>No messages... yet ! </h1> -->
+    <%# if current_user.profile.is_bar_manager %>
+      <!-- <h3><%#= link_to "Discover our Artists ✨", profiles_path, class: "b-border-tbg fullspace" %></h3> -->
+    <%# else %>
+      <!-- <h3><%#= link_to "Discover our bars 🍸", bars_path, class: "b-border-tbg fullspace" %></h3> -->
+    <%# end %>
+  <%# end %>
+<!-- </div> -->
