--- a/app/assets/stylesheets/components/_chat-sidenav.scss
+++ b/app/assets/stylesheets/components/_chat-sidenav.scss
@@ -6,4 +6,22 @@
   width: 300px;
   height: 100%;
   margin-top: 70px;
+  padding-bottom: 130px;
+  overflow-y: auto;
+}
+
+.sidenav-container {
+  border-bottom: 1px solid;
+}
+
+.sidenav-message-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 5px;
+  word-break: break-word;
+}
+
+h3 {
+  text-align: center;
 }
