--- a/app/views/chatboxes/index.html.erb
+++ b/app/views/chatboxes/index.html.erb
@@ -2,16 +2,22 @@
   <% if !@chatboxes.empty? %>
     <div class="sidenav">
       <% @chatboxes.each do |hash| %>
-        <div>
-          <h3><%= hash[:partners_name] %></h3>
+        <div class="sidenav-container">
+          <div>
+            <h3><%= hash[:partners_name] %>:</h3>
+          </div>
+          <div class="sidenav-message-container">
+            <div>
+              <p><%= cl_image_tag hash[:user_photo], class: "avatar" %></p>
+            </div>
+            <div>
+              <h4><%= hash[:last_msgs_content] %></h4><br>
+            </div>
+            <div>
+              <%= link_to "=>", chatbox_path(hash[:id]),class: "b-border-tbg" %>
+            </div>
+          </div>
         </div>
-        <div>
-          <p><%= hash[:last_msgs_username] %> sent:</p>
-        </div>
-        <div>
-          <h4><%= hash[:last_msgs_content] %></h4><br>
-        </div>
-        <%= link_to "Read previous", chatbox_path(hash[:id]),class: "b-border-tbg" %>
       <% end %>
     </div>
 
