--- a/app/views/profiles/dashboard.html.erb
+++ b/app/views/profiles/dashboard.html.erb
@@ -18,7 +18,7 @@
             <% end %>
             <% if current_user.profile.is_bar_manager %>
               <%= link_to 'Edit event', edit_event_path(event), class: "bdash" %>
-              <%= link_to 'Delete event', event_path(event), method: :delete, class: "bdash", data: { confirm: "Delete this event?" } %>
+              <%= link_to 'Delete event', event_path(event), method: :delete, class: "bdash", data: { confirm: "Delete this event ?" } %>
             <%end%>
             </div>
           <%end%>
@@ -44,7 +44,7 @@
             <% end %>
             <% if current_user.profile.is_bar_manager %>
               <%= link_to 'Edit event', edit_event_path(event), class: "bdash" %>
-              <%= link_to 'Delete event', event_path(event), method: :delete, class: "bdash", data: { confirm: "Are you sure you want to delete this event?" } %>
+              <%= link_to 'Delete event', event_path(event), method: :delete, class: "bdash", data: { confirm: "Delete this event ?" } %>
             <%end%>
             </div>
           <%end%>
@@ -71,7 +71,7 @@
             <% end %>
             <% if current_user.profile.is_bar_manager %>
               <%= link_to 'Edit event', edit_event_path(event), class: "bdash" %>
-              <%= link_to 'Delete event', event_path(event), method: :delete, class: "bdash", data: { confirm: "Are you sure you want to delete this event?" } %>
+              <%= link_to 'Delete event', event_path(event), method: :delete, class: "bdash", data: { confirm: "Delete this event ?" } %>
             <%end%>
             <% if @reviews[i] %>
               <br><div class="review-w">
@@ -83,7 +83,7 @@
                       Edit Review
                     </button></p>
                   <%= render 'reviews/new_modal', event: event, review: Review.new  %>
-                <p><%= link_to 'Delete review', event_review_path(event, @reviews[i]), method: :delete, data: { confirm: "Are you sure?" }, class: "bw-border-tbg" %></p>
+                <p><%= link_to 'Delete review', event_review_path(event, @reviews[i]), method: :delete, data: { confirm: "Delete this event ?" }, class: "bw-border-tbg" %></p>
               </div>
             <% else %>
                <p><button type="button" class="button bw-border-tbg" data-toggle="modal" data-target="#addEvent<%= event.id %>ReviewModal">
