Added navbar and map to profile

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,7 +1,4 @@
-<% if @profile.is_artist %>
-<%= render 'artist-banner'%>
-<%end%>
-<div class="container">
+<div class="container"><br><br><br><br>
 
   <% if @profile.is_artist %>
 
@@ -117,8 +114,9 @@
 
   <% elsif @profile.is_bar_manager %>
 
-
-    <div class="card-profile-s">
+    <div class="row">
+      <div class="col-xs-10 col-sm-12 col-md-8">
+      <div class="card-profile">
       <%= cl_image_tag @profile.photo, :width => 150, :height => 150, crop: :fill, id: "profile", gravity: :face %>
       <div class="left-description">
         <h2>
@@ -134,6 +132,17 @@
         <%end%>
       </div>
     </div>
+
+  </div>
+
+      <div class="col-xs-10 col-sm-8 col-md-4"
+            id="map"
+            style="width: 100%;
+            height: auto; margin: 10px auto; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
+            data-markers="<%= @markers.to_json %>"
+            data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+      ></div>
+</div>
 
     <% if !@profile.user.events.empty? %>
       <br><h1>Events</h1>
