--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -1,3 +1,13 @@
+.message-cont {
+  // position: fixed;
+  // right: 0;
+  // top: 0;
+  // height: 100%;
+  // width: 100%;
+  padding-left: 300px;
+  margin-top: 60px;
+}
+
 .messages {
   font-size: 14px;
   color: #868686;
