--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -20,10 +20,8 @@
   </div>
 
 
-    <div class="row">
 
-      <div class="col-xs-10 col-sm-12 col-md-8">
-        <div class="card-profile">
+        <div class="card-profile-s">
           <%= cl_image_tag @profile.photo, :width => 150, :height => 150, crop: :fill, id: "profile", gravity: :face %>
           <div class="left-description">
             <h4>
