small change showing edit-delete only to event_bar_owner

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= simple_form_for [@profile, event] do |f| %>
+<%= simple_form_for [@profile, @event] do |f| %>
 
 
   <%= f.error_notification %>
