corrected profile barmanager

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -117,7 +117,7 @@
 
   <% elsif @profile.is_bar_manager %>
 
-      <div class="card-profile-s">
+      <br><br><br><br><div class="card-profile-s">
       <%= cl_image_tag @profile.photo, :width => 150, :height => 150, crop: :fill, id: "profile", gravity: :face %>
       <div class="left-description">
         <h2>
