--- a/app/assets/stylesheets/components/_chat-sidenav.scss
+++ b/app/assets/stylesheets/components/_chat-sidenav.scss
@@ -2,7 +2,7 @@
   position: fixed;
   left: 0;
   top: 0;
-  background-color: blue;
+  background-color: #d8d8e6;
   width: 300px;
   height: 100%;
   margin-top: 70px;
@@ -14,14 +14,28 @@
   border-bottom: 1px solid;
 }
 
+// .sidenav-container a:hover, a:visited, a:link, a:active {
+//   text-decoration: none !important;
+// }
+
 .sidenav-message-container {
   display: flex;
-  justify-content: space-between;
+  // justify-content: space-between;
   align-items: center;
   padding-right: 5px;
   word-break: break-word;
+  background-color: #d8d8e6;
 }
 
-h3 {
+.sidenav-message-container:hover {
+  background-color: #807FAC;
+}
+
+.last-msg-content {
+  text-align: left;
+  padding-left: 3px;
+}
+
+.partner-name {
   text-align: center;
 }
