--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -5,7 +5,7 @@
   // height: 100%;
   // width: 100%;
   padding-left: 300px;
-  margin-top: 60px;
+  margin-top: 70px;
 }
 
 .messages {
@@ -64,7 +64,7 @@ input.form-control {
 }
 
 .chat-header {
-  background-color: #4F2F4C;
+  background-color: #807FAC;
   color: white;
   padding: 10px 20px;
   margin-top: 10px;
