--- a/app/views/chatboxes/show.html.erb
+++ b/app/views/chatboxes/show.html.erb
@@ -2,20 +2,17 @@
       <div class="sidenav">
         <% @chatboxes.each do |hash| %>
           <div class="sidenav-container">
-            <div>
+            <div class="partner-name">
               <h3><%= hash[:partners_name] %>:</h3>
             </div>
-            <div class="sidenav-message-container">
-              <div>
-                <p><%= cl_image_tag hash[:user_photo], class: "avatar" %></p>
-              </div>
-              <div>
-                <h4><%= hash[:last_msgs_content] %></h4><br>
-              </div>
-              <div>
-                <%= link_to "=>", chatbox_path(hash[:id]),class: "b-border-tbg" %>
-              </div>
-            </div>
+              <%= link_to(chatbox_path(hash[:id]), class: "sidenav-message-container") do %>
+                <div>
+                  <p><%= cl_image_tag hash[:user_photo], class: "avatar" %></p>
+                </div>
+                <div class="last-msg-content">
+                  <p><%= hash[:last_msgs_content] %></p>
+                </div>
+              <% end %>
           </div>
         <% end %>
       </div>
