--- a/app/views/bars/show.html.erb
+++ b/app/views/bars/show.html.erb
@@ -17,7 +17,7 @@
 
   <% if !@bar.events.empty? %>
 
-        <h2>Events</h2>
+        <br><h1>Events</h1>
         <div class="cards-grid-3quarter">
 
         <div class="events">
@@ -34,11 +34,10 @@
         <div
           id="map"
           style="width: 300px;
-          height: 100vh; margin: 10px auto; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
+          height: 300px; margin: 10px auto; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
           data-markers="<%= @markers.to_json %>"
           data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
         ></div>
-        </div>
     </div>
 
   <% else %>
@@ -53,17 +52,32 @@
 
   <%end%>
 
-  <% if current_user.profile.is_artist %>
-    <h3>RATINGS:</h3>
-    <p>average rating: </p>
-    <% @star.times do %>
-      <i class="fas fa-star"></i>
-    <% end %>
-    <% @reviews.each do |review| %>
-      <p><%= review[:content] %></p>
-      <p>Rating:<%= review[:rating] %></p>
-    <% end %>
-  <% end %>
+      <% if !@reviews.empty? && current_user.profile.is_artist%>
+        <h1>              <% @star.times do %>
+                  <i class="fas fa-star"></i>
+              <% end %>
+        </h1>
+
+          <div class="row">
+            <% @reviews.each do |review| %>
+              <div class="col-xs-10 col-sm-6 col-md-4 col-lg-3">
+                <div class="review">
+                  <h4>
+                    <% review[:rating].times do %>
+                        <i class="fas fa-star"></i>
+                    <% end %>
+                  </h4>
+
+                    “<%= review[:content] %>”
+
+                   -<%= link_to review.user.profile.username, profile_path(review.user.profile), class:"blue-link" %>
+                </div>
+              </div>
+            <% end %>
+          </div>
+      <% end %>
+
+
 
 <br><div class="fullspace"><%= link_to "Back to list of bars", bars_path, class:"b-allwidth-lg" %></div>
 
