--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -5,10 +5,11 @@
     <div class="cards-grid-3quarter">
 
       <div class="left">
-        <h2><%= link_to @artist[:username].capitalize, profile_path(@artist),class:"blue-link" %></h2>
+
         <div class="card-profile">
         <%= cl_image_tag @artist.photo, :width => 150, :height => 150, crop: :fill, id: "profile", gravity: :face %>
           <div class="left-description">
+            <h2><%= link_to @artist[:username].capitalize, profile_path(@artist),class:"blue-link" %></h2>
             <h4>
               <%= @artist.artist_description %>
             </h4>
@@ -18,17 +19,22 @@
       </div>
 
       <div class="right">
-        <h2><%= link_to @event.bar.name, bar_path(@event.bar), class:"blue-link"%></h2>
-        <div
+        <% if !@event.bar.pictures.empty? %>
+          <div class="cardib" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.2)), url('<%= @event.bar.pictures[0].photo %>');">
+          <%= link_to @event.bar.name.upcase , bar_path(@event.bar), class:"bw-border-tbg bar" %>
+          </div>
+        <%end%>
+      </div>
+    </div>
+
+             <div
           id="map"
           style="width: 100%;
-          height: 250px; margin: 10px auto; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
+          height: 350px; margin: 10px auto; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
           data-markers="<%= @markers.to_json %>"
           data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
         ></div>
-      </div>
 
-    </div>
 
       <% if current_user.profile.is_bar_manager %>
         <p><%= link_to 'Edit event', edit_event_path(@event), class: "b-border-tbg" %></p>
@@ -36,3 +42,5 @@
       <%end%>
 
 </div>
+
+
