--- a/app/views/chatboxes/show.html.erb
+++ b/app/views/chatboxes/show.html.erb
@@ -33,7 +33,7 @@
           </div>
           <div id="create-message">
             <%= simple_form_for [ @chatbox, Message.new ], remote: true, html: {autocomplete: "off" } do |f| %>
-              <%= f.text_field :content, label: false %>
+              <%= f.input :content, label: false %>
             <% end %>
           </div>
         </div>
