--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -17,6 +17,10 @@
   left: 5px;
 }
 
+.nodec:hover {
+  text-decoration: none;
+}
+
 .card-product-infos {
   padding: 10px;
   margin: 10px;
@@ -290,6 +294,10 @@ height: 100%;
   line-height: 70%;
   h1 {
     font-size: 8em;
+  }
+  &:hover {
+    color:white;
+    font-style: bold;
   }
  }
 
