--- a/app/assets/stylesheets/components/_message.scss
+++ b/app/assets/stylesheets/components/_message.scss
@@ -1,11 +1,17 @@
 .message-cont {
-  // position: fixed;
-  // right: 0;
-  // top: 0;
+  position: fixed;
+  right: 0;
+  width: calc(100vw - 300px);
+  height: calc(100vh - 70px);
   // height: 100%;
   // width: 100%;
-  padding-left: 300px;
-  margin-top: 75px;
+  padding-left: 10px;
+  margin-top: 70px;
+  input {
+    position: fixed;
+    bottom: 10px;
+    border-radius: 5px;
+  }
 }
 
 .messages {
@@ -26,13 +32,22 @@
   &.right {
     flex-direction: row-reverse;
     .message-content {
-      background-color: #F2F9FC;
+        background-color: $bv-hangar;
+        color: white;
+        opacity: 0.6;
     }
+  &.left {
+    background-color: white;
+    color: $bv-hangar;
+    border: 1px solid $bv-hangar;
+    border-radius: 3px;
+    opacity: 0.8;
+  }
   }
 }
 .message-content {
   background-color: #F7F7F7;
-  border-radius: 3px;
+  border-radius: 5px;
   margin: 0 10px;
   padding: 11px 10px 8px 10px;
 }
@@ -64,15 +79,17 @@ input.form-control {
 }
 
 .chat-header {
-  position: sticky; top: 75px;
+  position: sticky; top: 70px;
   display: flex;
+  border-radius: 5px;
   justify-content: space-between;
-  background-color: #807FAC;
+  background-color: $bv-hangar;
+  opacity: 0.8;
   color: white;
   padding: 10px 20px;
   margin-top: 10px;
   h4 {
-    margin: 0;
+    margin: 0px !important;
   }
 }
 
