--- a/app/views/chatboxes/index.html.erb
+++ b/app/views/chatboxes/index.html.erb
@@ -1,34 +1,35 @@
-<div class="container"><br><br><br><br>
-  <% if !@chatboxes.empty? %>
-    <div class="sidenav">
-      <% @chatboxes.each do |hash| %>
-          <div class="sidenav-container">
-            <div class="partner-name">
-              <h3><%= link_to hash[:partners_name], profile_path(hash[:partners_profile]) %>:</h3>
+<div class="fuckfooter">
+
+  <div class="container"><br><br><br><br>
+    <% if !@chatboxes.empty? %>
+      <div class="sidenav">
+
+        <% @chatboxes.each do |hash| %>
+            <div class="sidenav-container">
+              <%= link_to(chatbox_path(hash[:id]), class: "white") do %>
+              <div class= "sidenav-message-container">
+                <%= cl_image_tag hash[:user_photo], class: "avatar" %>
+                <div class="last-msg-content">
+                <strong><%= link_to hash[:partners_name], chatbox_path(hash[:id] %></strong>
+                  <p><%= hash[:last_msgs_content] %></p>
+                </div>
+              <% end %>
             </div>
-            <%= link_to(chatbox_path(hash[:id]), class: "sidenav-message-container") do %>
-              <div>
-                <p><%= cl_image_tag hash[:user_photo], class: "avatar" %></p>
-              </div>
-              <div class="last-msg-content">
-                <p><%= hash[:last_msgs_content] %></p>
-              </div>
-            <% end %>
           </div>
-      <% end %>
-    </div>
+        <% end %>
+      </div>
 
-  <% else %>
-
-    <h1>No messages... yet ! </h1>
-    <%if current_user.profile.is_bar_manager %>
-      <h3><%= link_to "Discover our Artists ✨", profiles_path, class: "b-border-tbg fullspace" %></h3>
     <% else %>
-      <h3><%= link_to "Discover our bars 🍸", bars_path, class: "b-border-tbg fullspace" %></h3>
-    <% end %>
-  <% end %>
-</div>
 
+      <h1>No messages... yet ! </h1>
+      <%if current_user.profile.is_bar_manager %>
+        <h3><%= link_to "Discover our Artists ✨", profiles_path, class: "b-border-tbg fullspace" %></h3>
+      <% else %>
+        <h3><%= link_to "Discover our bars 🍸", bars_path, class: "b-border-tbg fullspace" %></h3>
+      <% end %>
+    <% end %>
+  </div>
+</div>
 
 
 
