--- a/app/views/events/_new_modal.html.erb
+++ b/app/views/events/_new_modal.html.erb
@@ -22,8 +22,8 @@
               <%= f.error_notification %>
 
               <%= f.input :name %>
-              <%= f.input :start_date, order: [:day, :month, :year] %>
-              <%= f.input :end_date, order: [:day, :month, :year] %>
+              <%= f.input :start_date, html5: true, as: :date %>
+              <%= f.input :end_date, html5: true, as: :date %>
               <%= f.input :description %>
               <%= f.input :category, collection: ["Concert", "Exhibition", "Performance"] %>
               <%= f.input :bar_id, collection: current_user.bars, value_method: :id %>
