responsive carrousel home

--- a/app/views/pages/_home-banner.html.erb
+++ b/app/views/pages/_home-banner.html.erb
@@ -10,9 +10,9 @@
               <div class="carousel-caption">
                   <class class="hero">
                     <h3>B A R T </h3>
-                      <h2>Connecting locals, </h2>
-                      <h2>Creating experiences ✨</h2>
-                      <br><h4><%= link_to "Get started", new_profile_path, class: "bw-border-tbg" %></h4>
+                      <h2>Connecting locals, <br>
+                      Creating experiences ✨</h2>
+                      <h4><%= link_to "Get started", new_profile_path, class: "bw-border-tbg" %></h4>
                     </class>
               </div>
             </div>
@@ -24,8 +24,8 @@
                <div class="carousel-caption">
                   <class class="hero">
                       <h3>Promoting  c u l t u r e</h3>
-                      <h2>Give emerging artists the opportunity to showcase their work</h2>
-                      <br><h4><%= link_to "Discover our Artists", profiles_path, class: "bw-border-tbg" %></h4>
+                      <h2>Give emerging artists <br>the opportunity to showcase their work</h2>
+                      <h4><%= link_to "Discover our Artists", profiles_path, class: "bw-border-tbg" %></h4>
                     </class>
 
               </div>
@@ -39,10 +39,10 @@
                 <div class="carousel-caption">
                   <class class="hero">
                       <h3>J o i n</h3>
-                      <h3> our </h3>
-                      <h3>community !</h3>
-                      <h2>A network made to promote culture, empower local businesses & artists, craft original experiences.</h2>
-                      <br><h4><%= link_to "Get started", new_profile_path, class: "bw-border-tbg" %></h4>
+                      <!-- <h3> our </h3> -->
+                      <h3>our community !</h3>
+                      <h2>A network made to promote culture,<br> empower local businesses & artists,<br> craft original experiences.</h2>
+                      <h4><%= link_to "Get started", new_profile_path, class: "bw-border-tbg" %></h4>
                     </class>
               </div>
             </div>
