--- a/app/assets/stylesheets/components/_banner-home.scss
+++ b/app/assets/stylesheets/components/_banner-home.scss
@@ -4,7 +4,7 @@
   background-color: rgba(0,0,0,.4);
   padding: 1000PX;
   width: 3000PX;
-  top: -400px;
+  top: -20vw;
   color: white;
     text-align: center;
     text-shadow: 1px 1px 0 rgba(0,0,0,.75);
@@ -15,10 +15,17 @@
               transform: translate3d(-50%,-50%,0);
   h3 {
     font-family: $bebas;
-    font-size: 5em;
+    font-size: 6vw;
     font-weight: bold;
     margin: 0;
     padding: 0;
+  }
+  h4 {
+    font-size: 3vw;
+    margin-top: 2.5vw;
+  }
+  h2 {
+    font-size: 3vw;
   }
 }
 
