--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -5,8 +5,8 @@
   <%= f.error_notification %>
 
   <%= f.input :name %>
-  <%= f.input :start_date, order: [:day, :month, :year] %>
-  <%= f.input :end_date, order: [:day, :month, :year] %>
+  <%= f.input :start_date, as: :date, html5: true %>
+  <%= f.input :end_date, as: :date, html5: true %>
   <%= f.input :description %>
   <%= f.input :category, collection: ["Concert", "Exhibition", "Performance"] %>
   <%= f.input :bar_id, collection: current_user.bars, value_method: :id %>
