--- a/app/views/bars/show.html.erb
+++ b/app/views/bars/show.html.erb
@@ -18,9 +18,9 @@
   <% if !@bar.events.empty? %>
 
         <br><h1>Events</h1>
-        <div class="cards-grid-3quarter">
+        <div class="row">
 
-        <div class="events">
+        <div class="events col-xs-12 col-sm-12 col-md-8">
             <% @bar.events.each do |event| %>
               <div class="card-hz-bg">
                 <%= cl_image_tag event.photo, width: 200, height: 200, crop: :fill %>
@@ -31,14 +31,16 @@
               </div>
             <% end %>
         </div>
-        <div
+
+        <div class="col-xs-12 col-sm-12 col-md-4"
           id="map"
-          style="width: 300px;
+          style="width: 100%;
           height: 300px; margin: 10px auto; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
           data-markers="<%= @markers.to_json %>"
           data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
         ></div>
     </div>
+
 
   <% else %>
 
