banner bar and artist index ok

--- a/app/assets/stylesheets/components/_banner-bar.scss
+++ b/app/assets/stylesheets/components/_banner-bar.scss
@@ -44,7 +44,7 @@
   margin-top: 0px !important;
   h1  {
   font-family: $bebas;
-  font-size: 13em;
+  font-size: 25vw;
   text-align: left;
   position: absolute;
   left: 80px;
@@ -92,7 +92,7 @@ label {
   margin-top: 0px !important;
   h1  {
   font-family: $bebas;
-  font-size: 10em;
+  font-size: 13vw;
   text-align: left;
   position: absolute;
   top: 220px;
