--- a/app/views/bars/index.html.erb
+++ b/app/views/bars/index.html.erb
@@ -1,6 +1,6 @@
 <div class="banner-index" style="background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url(https://source.unsplash.com/oXOIH4UAixo/1300x780);">
   <div class="container">
-    <h1 class="white">All bars </h1>
+    <h1 class="white">All <br> bars </h1>
   </div>
 </div>
 
